--- a/package.json
+++ b/package.json
@@ -13,41 +13,37 @@
   "dependencies": {
     "@vitalets/google-translate-api": "github:vitalets/google-translate-api",
     "ascii-table": "0.0.9",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "byte-size": "^7.0.0",
+    "canvacord": "^5.0.8",
     "canvas": "^2.6.1",
-    "canvas-senpai": "^0.1.6",
-    "chalk": "^4.1.0",
-    "cheerio": "1.0.0-rc.3",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
-    "discord.js": "^12.4.1",
+    "discord-xp": "file:discord-xp",
+    "discord.js": "^12.5.1",
     "discord.js-menu": "2.2.2",
-    "dotenv": "^8.2.0",
-    "duck-duck-scrape": "^1.0.3",
-    "express": "^4.17.1",
     "fortnite": "^4.3.2",
-    "glob": "^7.1.6",
     "jimp": "^0.16.1",
     "kurasuta": "^2.2.0",
     "lolis.life": "^4.0.0",
-    "mathjs": "^7.5.1",
+    "mathjs": "^8.1.0",
+    "merge-options": "^3.0.4",
+    "miniget": "^4.1.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.10",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.4",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "piadas-library": "^1.2.7",
     "quick.db": "^7.1.3",
     "salvage.db": "^1.2.4",
-    "snekfetch": "^4.0.4",
+    "scrape-yt": "^1.4.6",
     "superagent": "^6.1.0",
-    "tesseract.js": "^2.1.4",
     "twemoji-parser": "^13.0.0",
     "weather-js": "^2.0.0",
-    "ytdl-core": "^3.4.1"
+    "ytdl-core": "^4.1.2"
   },
   "description": ""
 }
