--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
+    "discord-music-player": "^6.1.1-fix3",
     "discord-xp": "file:discord-xp",
     "discord.js": "^12.5.1",
     "discord.js-menu": "2.2.2",
+    "discord.js-self": "^12.0.4",
     "fortnite": "^4.3.2",
     "jimp": "^0.16.1",
     "kurasuta": "^2.2.0",
