➕ | Removendo coisas que não são pra estar no github mas estão

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /node_modules
+/discord-backups
 discord-backup
 bots
 .vscode
 config.json
 star-dev.zip
 webhooks.json
-1.png
-2.png
+adg1.png
+adg2.png
