--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "@vitalets/google-translate-api": "github:vitalets/google-translate-api",
     "ascii-table": "0.0.9",
     "axios": "^0.21.0",
@@ -42,6 +43,7 @@
     "node-fetch": "^2.6.1",
     "node-superfetch": "^0.1.10",
     "nodemon": "^2.0.6",
+    "opusscript": "0.0.7",
     "piadas-library": "^1.2.7",
     "quick.db": "^7.1.3",
     "salvage.db": "^1.2.4",
