--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dblapi.js": "^2.4.1",
     "discord-giveaways": "^4.3.0",
     "discord-music-player": "^6.1.1-fix3",
-    "discord-xp": "file:discord-xp",
+    "discord-xp": "^1.1.7",
     "discord.js": "^12.5.1",
     "discord.js-menu": "2.2.2",
     "discord.js-self": "^12.0.4",
