--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "axios": "^0.21.0",
     "byte-size": "^7.0.0",
     "canvacord": "^5.0.8",
-    "canvas": "^2.6.1",
     "child_process": "^1.0.2",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
+    "discord-canvas": "^1.4.1",
     "discord-giveaways": "^4.3.0",
     "discord-music-player": "^6.1.1-fix3",
     "discord-xp": "^1.1.7",
     "discord.js": "^12.5.1",
+    "discord.js-light": "^3.5.0",
     "discord.js-menu": "2.2.2",
     "discord.js-self": "^12.0.4",
+    "erela.js": "^2.3.1",
     "fortnite": "^4.3.2",
     "glob": "^7.1.6",
     "jimp": "^0.16.1",
