--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@discordjs/opus": "^0.3.3",
     "@vitalets/google-translate-api": "github:vitalets/google-translate-api",
     "ascii-table": "0.0.9",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "byte-size": "^7.0.0",
     "canvacord": "^5.0.8",
     "child_process": "^1.0.2",
@@ -47,6 +47,7 @@
     "nodemon": "^2.0.6",
     "opusscript": "0.0.7",
     "piadas-library": "^1.2.7",
+    "puppeteer": "^5.5.0",
     "quick.db": "^7.1.3",
     "salvage.db": "^1.2.4",
     "scrape-yt": "^1.4.6",
