📊 | oto com fome

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "star",
   "version": "1.0.0",
-  "main": "shard.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bot.js",
-    "devStart": "nodemon shard.js"
+    "devStart": "nodemon bot.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@vitalets/google-translate-api": "github:vitalets/google-translate-api",
     "ascii-table": "0.0.9",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "byte-size": "^7.0.0",
     "canvacord": "^5.0.8",
     "child_process": "^1.0.2",
@@ -28,13 +29,17 @@
     "discord.js-light": "^3.5.0",
     "discord.js-menu": "2.2.2",
     "discord.js-self": "^12.0.4",
+    "ejs": "^3.1.5",
     "erela.js": "^2.3.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fortnite": "^4.3.2",
     "glob": "^7.1.6",
     "jimp": "^0.16.1",
     "kurasuta": "^2.2.0",
     "lolis.life": "^4.0.0",
     "mathjs": "^8.1.0",
+    "memorystore": "^1.6.4",
     "merge-options": "^3.0.4",
     "miniget": "^4.1.0",
     "moment": "^2.29.1",
@@ -46,6 +51,8 @@
     "node-superfetch": "^0.1.10",
     "nodemon": "^2.0.6",
     "opusscript": "0.0.7",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "piadas-library": "^1.2.7",
     "puppeteer": "^5.5.0",
     "quick.db": "^7.1.3",
