--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
+    "dblapi.js": "^2.4.1",
     "discord-backup": "^2.4.1",
     "discord-image-generation": "^1.4.7",
     "discord.js": "^12.5.1",
