arrumando o welcome/goodbye

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Procfile
 main.sh
 server.js
 package-lock.json
+star-developer.zip
 src/config/json/botlist.json
 src/config/json/config.json
 src/config/json/player.json
