--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "lavacord": "^1.1.9",
     "moment": "^2.29.1",
+    "mongoose": "^5.11.18",
     "nekos.life": "^2.0.7",
     "os": "^0.1.1",
     "path": "^0.12.7",
