--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@ Procfile
 .replit
 main.sh
 server.js
+.eslintrc.js
 package-lock.json
 star-developer.zip
 src/config/json/botlist.json
 src/config/json/config.json
 src/config/json/player.json
+utils/LavalinkManagerBackup
