--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "pretty-ms": "^7.0.1",
     "quickmongo": "^3.0.0",
     "votos-zuraaa": "^2.0.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0"
   }
 }
