--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "discord.js": "^12.5.1",
     "discord.js-light": "^3.5.3",
     "erela.js": "^2.3.1",
+    "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
     "express": "^4.17.1",
-    "lavacord": "^1.1.9",
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "nekos.life": "^2.0.7",
