muita coisa, foda

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ src/config/json/botlist.json
 src/config/json/config.json
 src/config/json/player.json
 src/config/json/webhooks.json
+src/config/json/dashboard.json
