--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "byte-size": "^7.0.1",
+    "canvacord": "^5.1.0",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
-    "dblapi.js": "^2.4.1",
     "discord-backup": "^2.4.1",
     "discord-image-generation": "^1.4.7",
     "discord.js": "^12.5.1",
-    "discord.js-light": "^3.5.3",
     "erela.js": "^2.3.1",
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
-    "express": "^4.17.1",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "mongoose": "^5.11.18",
-    "nekos.life": "^2.0.7",
+    "music-progress-bar": "^1.0.4",
     "os": "^0.1.1",
     "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
-    "quickmongo": "^3.0.0",
-    "votos-zuraaa": "^2.0.1"
+    "quickmongo": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
