--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "byte-size": "^7.0.1",
-    "canvacord": "^5.1.0",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
+    "dblapi.js": "^2.4.1",
     "discord-backup": "^2.4.1",
     "discord-image-generation": "^1.4.7",
     "discord.js": "^12.5.1",
     "erela.js": "^2.3.1",
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
+    "infinity-api": "^1.1.8",
+    "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.11.19",
