--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
     "infinity-api": "^1.1.8",
+    "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
