--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rbxgen",
+  "name": "starbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -23,6 +23,7 @@
     "erela.js-spotify": "^1.2.0",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
+    "lavaplayer": "0.0.1",
     "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
