--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ src/config/json/config.json
 src/config/json/player.json
 src/config/json/webhooks.json
 src/config/json/dashboard.json
+
+# DA LISTA DE ADG E SEUS PNG NA PASTA
+
+perfil-274289097689006080.png
+perfil-568182075929395210.png
