--- a/package.json
+++ b/package.json
@@ -11,24 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "byte-size": "^7.0.1",
+    "@discordjs/opus": "^0.4.0",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
-    "discord-backup": "^2.4.1",
     "discord-image-generation": "^1.4.7",
+    "discord-player": "^3.4.0",
     "discord.js": "^12.5.1",
-    "erela.js": "^2.3.1",
-    "erela.js-deezer": "^1.0.5",
-    "erela.js-spotify": "^1.2.0",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
-    "lavaplayer": "0.0.1",
     "listcord.js": "^2.1.5",
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
     "mongoose": "^5.11.19",
-    "music-progress-bar": "^1.0.4",
     "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
