--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
+    "discord-giveaways": "^4.4.3",
     "discord-image-generation": "^1.4.7",
-    "discord-player": "^3.4.0",
     "discord.js": "^12.5.1",
+    "ffmpeg-static": "^4.2.7",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
     "mongoose": "^5.11.19",
+    "ms": "^2.1.3",
     "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
