--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.4.0",
+    "aki-api": "^5.2.1",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
@@ -19,6 +20,7 @@
     "discord-image-generation": "^1.4.7",
     "discord-player": "^3.4.0",
     "discord.js": "^12.5.1",
+    "discord.js-collector": "^1.8.9",
     "ffmpeg-static": "^4.2.7",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
