--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-player": "^3.4.0",
     "discord.js": "^12.5.1",
     "discord.js-collector": "^1.8.9",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
