--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ src/config/json/dashboard.json
 
 perfil-274289097689006080.png
 perfil-568182075929395210.png
+
+# AFF KIBA N DEU TRABALHO
+
+src/commands/Util/tradutor.js
