--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,10 @@ server.js
 package-lock.json
 star-developer.zip
 LavalinkManagerBackup.js
-src/config/json/botlist.json
+src/config/json/keys.json
 src/config/json/config.json
 src/config/json/player.json
+src/config/json/botlist.json
 src/config/json/webhooks.json
 src/config/json/giveaways.json
 src/config/json/dashboard.json
