--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "discord.js": "^12.5.1",
     "discord.js-collector": "^1.8.9",
     "express": "^4.17.1",
+    "fortnite": "^4.3.2",
+    "fortnite-9812": "^1.0.4",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.19",
     "ms": "^2.1.3",
     "parse-ms": "^2.1.0",
