--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "starbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node shard.js"
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aki-api": "^5.2.1",
+    "bufferutil": "^4.0.3",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
     "discord-giveaways": "^4.4.3",
     "discord-image-generation": "^1.4.7",
-    "discord.js": "^12.5.1",
     "discord.js-collector": "^1.8.9",
+    "discord.js-light": "^3.5.4",
+    "erlpack": "github:discord/erlpack",
     "express": "^4.17.1",
     "fortnite": "^4.3.2",
     "fortnite-9812": "^1.0.4",
@@ -32,7 +34,9 @@
     "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
     "quickmongo": "^3.0.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "utf-8-validate": "^5.0.4",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
