--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.5.0",
     "aki-api": "^5.2.1",
     "bufferutil": "^4.0.3",
     "canvas": "^2.6.1",
@@ -18,8 +19,8 @@
     "dblapi.js": "^2.4.1",
     "discord-giveaways": "^4.4.3",
     "discord-image-generation": "^1.4.7",
+    "discord.js": "^12.5.1",
     "discord.js-collector": "^1.8.9",
-    "discord.js-light": "^3.5.4",
     "erlpack": "github:discord/erlpack",
     "express": "^4.17.1",
     "fortnite": "^4.3.2",
@@ -28,12 +29,12 @@
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.19",
+    "mongoose": "^5.12.2",
     "ms": "^2.1.3",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
-    "quickmongo": "^3.0.0",
+    "quickmongo": "^3.0.2",
     "superagent": "^6.1.0",
     "utf-8-validate": "^5.0.4",
     "zlib-sync": "^0.1.7"
