--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+    "start": "node shard.js"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +21,11 @@
     "discord-image-generation": "^1.4.7",
     "discord.js": "^12.5.1",
     "discord.js-collector": "^1.8.9",
+    "erela.js": "^2.3.2",
+    "erela.js-deezer": "^1.0.5",
+    "erela.js-spotify": "^1.2.0",
     "erlpack": "github:discord/erlpack",
     "express": "^4.17.1",
-    "fortnite": "^4.3.2",
-    "fortnite-9812": "^1.0.4",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
@@ -35,9 +36,7 @@
     "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
     "quickmongo": "^3.0.2",
-    "superagent": "^6.1.0",
-    "utf-8-validate": "^5.0.4",
-    "zlib-sync": "^0.1.7"
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
