--- a/package.json
+++ b/package.json
@@ -2,38 +2,37 @@
   "name": "starbot",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "clusters.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node shard.js"
+    "start": "node clusters.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
-    "@google-cloud/vision": "^2.3.1",
     "aki-api": "^5.2.1",
-    "bufferutil": "^4.0.3",
     "canvas": "^2.6.1",
+    "cluster": "^0.7.7",
     "colors": "^1.4.0",
     "dblapi.js": "^2.4.1",
     "discord-giveaways": "^4.4.3",
     "discord-image-generation": "^1.4.7",
-    "discord-slash-commands-client": "^1.1.1",
     "discord.js": "^12.5.3",
     "discord.js-collector": "^1.8.9",
     "erela.js": "^2.3.3",
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
-    "erlpack": "github:discord/erlpack",
     "express": "^4.17.1",
+    "http": "*",
     "infinity-api": "^1.1.8",
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "ms": "^2.1.3",
+    "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
     "pretty-ms": "^7.0.1",
