--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "ms": "^2.1.3",
+    "ocr-space-api-wrapper": "^1.0.5",
     "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
