--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "starbot",
   "version": "1.0.0",
   "description": "",
-  "main": "clusters.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node clusters.js"
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "aki-api": "^5.2.1",
     "async-lock": "^1.2.8",
     "canvas": "^2.6.1",
+    "canvas-constructor": "^4.1.0",
     "cluster": "^0.7.7",
     "colors": "^1.4.0",
     "discord-giveaways": "^4.4.3",
@@ -25,6 +26,7 @@
     "erela.js-spotify": "^1.2.0",
     "express": "^4.17.1",
     "infinity-api": "^1.1.8",
+    "isgd": "^1.1.3",
     "jimp": "^0.16.1",
     "listcord.js": "^2.1.5",
     "moment": "^2.29.1",
