tam tam tararaaaaaaaaaaaaaaaaaaaaaaaaa

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ main.sh
 server.js
 .eslintrc.js
 package-lock.json
+starevolution.mp4
 star-developer.zip
 LavalinkManagerBackup.js
 src/config/json/keys.json
