--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "path": "^0.12.7",
+    "pet-pet-gif": "^1.0.8",
     "pretty-ms": "^7.0.1",
     "quickmongo": "^3.0.2"
   },
