--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starbot",
+  "name": "star-bomba",
   "version": "1.0.0",
   "description": "",
   "main": "src/shard.js",
@@ -19,7 +19,7 @@
     "eris-sharder": "^1.10.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "star-database-manager": "^2.2.0",
+    "star-database-manager": "^2.2.1",
     "star-fetch": "^1.0.4"
   }
 }
