sistema de musica, configurando 300 coisas e deixando o bot + leve

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 package-lock.json
 src/botlists.json
 src/config/config.js
+src/config/player.js
 src/System/webhooks.json
 src/apikey.json
-.openode
-Dockerfile
