--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "star-bomba",
   "version": "1.0.0",
   "description": "",
-  "main": "src/shard.js",
+  "main": "src/star.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/shard.js"
+    "start": "node src/star.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +14,13 @@
     "axios": "^0.21.1",
     "canvas": "^2.8.0",
     "colors": "^1.4.0",
-    "discord.js-light": "^3.5.11",
+    "erela.js": "^2.3.3",
+    "erela.js-deezer": "^1.0.5",
+    "erela.js-spotify": "^1.2.0",
     "eris": "^0.15.1",
-    "eris-sharder": "^1.10.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "star-database-manager": "^2.4.1",
+    "star-database-manager": "^2.5.2",
     "star-fetch": "^1.0.4"
   }
 }
