--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "os-utils": "^0.0.14",
-    "star-database-manager": "^2.5.2",
+    "star-database-manager": "^3.0.2",
     "star-fetch": "^1.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0"
   }
 }
