Atualizando o ESLint, agora ele vive 🙏

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 # CONFIDENCIAL FOLDERS
 /lixeirinha
 /data
-/node_modules
+node_modules
 
 # INUTIL FILES
 package-lock.json
+*.log
 
 # CONFIDENCIAL FILES
 afazeres.txt
