--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "star",
   "version": "5.0.10",
-  "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!!",
+  "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!",
   "main": "src/star.js",
   "scripts": {
     "start": "node .",
