--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "canvas": "^2.8.0",
     "colors": "^1.4.0",
+    "discord-canvas": "^1.4.1",
     "erela.js": "^2.3.3",
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
