--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "star",
   "version": "5.1.5",
   "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!",
-  "main": "src/sharding.js",
+  "main": "src/star.js",
   "scripts": {
     "start": "node .",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
@@ -25,7 +25,6 @@
     "erela.js-deezer": "^1.0.5",
     "erela.js-spotify": "^1.2.0",
     "eris": "^0.15.1",
-    "eris-sharder": "^1.10.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "os-utils": "^0.0.14",
