--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # CONFIDENCIAL FOLDERS
 /lixeirinha
 /data
@@ -9,7 +8,7 @@ package-lock.json
 *.log
 
 # CONFIDENCIAL FILES
-afazeres.txt
+CHANGELOG.txt
 src/botlists.js
 src/apikeys.js
 src/config/config.js
