--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package-lock.json
 *.log
 
 # CONFIDENCIAL FILES
+src/containers/helper/config.js
 src/botlists.js
 src/apikeys.js
 src/config/config.js
