--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "star",
-  "version": "5.1.6",
+  "version": "5.1.7b",
   "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!",
   "main": "src/star.js",
   "scripts": {
