--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "star",
-  "version": "5.1.7b",
+  "version": "5.1.7a",
   "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!",
   "main": "src/star.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "eris": "^0.15.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "os-utils": "^0.0.14",
+    "pidusage": "^2.0.21",
     "star-database-manager": "^3.0.2",
     "star-fetch": "^1.0.4"
   },
