--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "canvas": "^2.8.0",
+    "cheerio": "^1.0.0-rc.10",
     "colors": "^1.4.0",
     "erela.js": "^2.3.3",
     "eris": "^0.15.1",
