--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "eris": "^0.15.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "pidusage": "^2.0.21",
-    "star-fetch": "^1.0.4"
+    "pidusage": "^2.0.21"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
