--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^0.21.1",
+    "bpl-helper": "^1.0.3",
     "canvas": "^2.8.0",
     "cheerio": "^1.0.0-rc.10",
     "colors": "^1.4.0",
