--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "colors": "^1.4.0",
     "erela.js": "^2.3.3",
     "eris": "^0.15.1",
+    "math-expression-evaluator": "^1.3.8",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "pidusage": "^2.0.21"
