--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas": "^2.8.0",
     "cheerio": "^1.0.0-rc.10",
     "colors": "^1.4.0",
+    "csv-parser": "^3.0.0",
     "erela.js": "^2.3.3",
     "eris": "^0.15.1",
     "math-expression-evaluator": "^1.3.8",
