--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/star.js",
   "scripts": {
     "start": "node .",
+    "dev": "",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "keywords": [
@@ -35,6 +36,7 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "nodemon": "^2.0.12"
   }
 }
