--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "star",
-  "version": "5.1.7a",
+  "version": "5.1.8",
   "description": "Helping servers grow exponentially with a simple solution. Make your server active and entertain your community with a simple solution - A unique discord bot, Star!",
   "main": "src/star.js",
   "scripts": {
+    "dev": "nodemon",
     "start": "node .",
-    "dev": "",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "keywords": [
@@ -14,7 +14,8 @@
     "fun",
     "bot",
     "discord",
-    "eris"
+    "eris",
+    "boat"
   ],
   "author": "yADG",
   "license": "Apache-2.0",
@@ -36,7 +37,6 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "nodemon": "^2.0.12"
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
