--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "csv-parser": "^3.0.0",
     "erela.js": "^2.3.3",
     "eris": "^0.15.1",
+    "eris-giveaways": "^1.0.2",
     "math-expression-evaluator": "^1.3.8",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
